--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="app">
-        <div id="timer" class="timer">00:00:00</div>
+        <div id="timer" class="timer">00 : 00 : 00</div>
     <div class="buttons">
         <button class="start" id="start">Start</button>
         <button class="stop" id="stop">Pause</button>
